# esparto

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  codecov.yml  esparto-doc.html  esparto-page-0.html  esparto-page.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  sonar-project.properties  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  lint-and-test.yml  python-package.yml  test-and-coverage.yml  veracode-analysis.yml
01-getting-started/: installation.html  quickstart.html
01-getting-started/installation/: index.html
01-getting-started/quickstart/: index.html
02-user-guide/: custom-content.html  customisation.html  document-design.html  examples.html  general-usage-old.html  general-usage.html  quick-reference-old.html  quick-reference.html  quick-start.html  tutorial-notebooks.html
02-user-guide/custom-content/: index.html
02-user-guide/customisation/: index.html
02-user-guide/document-design/: index.html
02-user-guide/examples/: index.html
02-user-guide/general-usage/: index.html
02-user-guide/output-options/: index.html
02-user-guide/quick-start/: index.html
02-user-guide/report-style/: index.html
02-user-guide/tutorial-notebooks/: index.html
03-api-reference/: adaptors.html  content.html  layout.html  options.html  publish.html
03-api-reference/adaptors/: index.html
03-api-reference/content/: index.html
03-api-reference/layout/: index.html
03-api-reference/options/: index.html
03-api-reference/publish/: index.html
04-about/: authors.html  contributing.html  license.html  release-notes.html  roadmap.html
04-about/authors/: index.html
04-about/contributing/: index.html
04-about/license/: index.html
04-about/release-notes/: index.html
04-about/roadmap/: index.html
docs/: Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  usage.rst
docs/01-getting-started/: installation.md  quickstart.md
docs/02-user-guide/: customisation.md  examples.md  general-usage-old.md  general-usage.md  output-options.md  quick-reference-old.md  quick-reference.md  quick-start.md  report-style.md  tutorial-notebooks.md
docs/03-api-reference/: adaptors.md  content.md  layout.md  options.md  publish.md
docs/04-about/: authors.md  contributing.md  license.md  release-notes.md  roadmap.md
docs/examples/: getting-started.ipynb  guided-tour.ipynb  interactive-plots.html  iris-report.html  iris-report.ipynb  iris.ipynb
docs/stylesheets/: extra.css
esparto/: __init__.py  __main__.py  _adaptors.py  _cdnlinks.py  _cli.py  _content.py  _contentdeps.py  _layout.py  _options.py  _publish.py  _typing.py  _utils.py  content.py  layout.py  publish.py
esparto/_resources/jinja/: base.html.jinja
esparto/design/: adaptors.py  base.py  content.py  layout.py
esparto/public/: test.html
esparto/publish/: cdnlinks.py  contentdeps.py  output.py
esparto/resources/css/: bootstrap-grid.min.css  bootstrap.css  esparto.css
esparto/resources/jinja/: base.html  base.html.jinja
esparto/resources/js/: esparto.js
esparto/templates/: base.html  content.html  content2.html
examples/: 02-modelling.html  boston-house-price-model.html  component-gallery.html  doc-with-navbrand.html  esparto-doc-with-toc.html  esparto-doc.html  esparto-inline.html  interactive-plots.html  interactive-report.html  introduction.html  iris-report.html  iris-report.ipynb  markdown.html  my-esparto-doc.html  my-report.html  my_report.html  regression-report.ipynb  scratch.html  scratch.py  test-page-Copy1.ipynb  test-page.html  test-page.ipynb
notebooks/: esparto_demo.ipynb  iris-report.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  check_package_version.py  conftest.py  example_pages.py  scratch.py  test_adaptors.py  test_cli.py  test_content.py  test_esparto.py  test_layout.py  test_options.py  test_publish.py  test_utils.py
tests/design/: test_adaptors.py  test_content.py  test_layout.py
tests/publish/: test_publish.py
tests/resources/: iris-virginica.jpg:Zone.Identifier  markdown.md
