[tool.poetry]
name = "esparto"
version = "0.1.2"
description = "Minimal frontend web framework written in Python."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://domvwt.github.io/esparto"
repository = "https://github.com/domvwt/esparto"

[tool.poetry.dependencies]
python = "^3.6.1"
jinja2 = "^2.10.1"
markdown = "^3.1"
Pillow = [">=7.0.0", "<9.0.0"]
beautifulsoup4 = {version = "^4.9.3", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pyment = "^0.3.3"
rope = "^0.18.0"
IPython = "^7.3"
jedi = "0.17.2"
mkdocs = "^1.1.2"
matplotlib = "^3.3.0"
html5lib = "^1.1"
pandas = "^1.0.0"
beautifulsoup4 = "^4.9.3"
mkdocs-bootstrap4 = "^0.1.5"
coverage = "^5.5"
mkdocs-material = "^7.1.0"
mkdocstrings = "^0.15.0"
pre-commit = "^2.12.0"
tox = "^3.23.0"
mypy = "^0.812"
isort = "^5.8.0"
flake8 = "^3.9.0"

[tool.poetry.extras]
extras = ["beautifulsoup4"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
