[tool.poetry]
name = "esparto"
version = "2.0.0"
description = "Simple HTML page and PDF document generator for Python."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://domvwt.github.io/esparto"
repository = "https://github.com/domvwt/esparto"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
jinja2 = ">=2.10.1,<4.0.0"
markdown = "^3.1"
Pillow = ">=7.0.0,<9"
dataclasses = {version = "*", python = "<3.7"}
beautifulsoup4 = {version = ">=4.7", optional = true}
weasyprint = {version = ">=51, <53", optional = true}
pyyaml = ">=5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pyment = "^0.3.3"
rope = "^0.19.0"
IPython = "^7.3"
jedi = "0.17.2"
mkdocs = "^1.1.2"
matplotlib = "^3.3.0"
html5lib = "^1.1"
pandas = "^1.0.0"
beautifulsoup4 = "^4.9.3"
mkdocs-bootstrap4 = "^0.1.5"
coverage = "^5.5"
mkdocs-material = "^7.1.0"
mkdocstrings = "^0.15.0"
pre-commit = "^2.12.0"
tox = "^3.23.0"
mypy = "^0.902"
isort = "^5.8.0"
flake8 = "^3.9.0"
bokeh = "^2.3.1"
plotly = "^4.14.3"
pandas-bokeh = "^0.5.5"
weasyprint = "52.5"
kaleido = "^0.2.1,!=0.2.1.post1"
sklearn = "^0.0"
shap = "^0.39.0"
zipp = "^3.4.1"
types-Markdown = "^3.3.0"
jupyter = "<6"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.extras]
extras = ["beautifulsoup4", "weasyprint"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
