[tool.poetry]
name = "esparto"
version = "3.0.0"
description = "Data driven report builder for the PyData ecosystem."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://domvwt.github.io/esparto"
repository = "https://github.com/domvwt/esparto"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.6.1"
jinja2 = ">=2.10.1"
markdown = ">=3.1"
pyyaml = ">=5.1"
beautifulsoup4 = ">=4.7"
dataclasses = {version = "*", python = "<3.7"}
Pillow = {version = ">=7.0.0", optional = true}
weasyprint = {version = ">=51", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
rope = "^0.19.0"
IPython = "^7.3"
mkdocs = "^1.1.2"
matplotlib = "^3.3.0"
html5lib = "^1.1"
pandas = "^1.0.0"
coverage = {version = "^5.5", python = "<4"}
mkdocs-material = "^7.1.0"
mkdocstrings = {version = "^0.15.0", python = "<4"}
pre-commit = "^2.12.0"
tox = "^3.23.0"
mypy = "^0.902"
isort = {version = "^5.8.0", python = "<4"}
flake8 = "^3.9.0"
bokeh = "^2.3.1"
plotly = "^4.14.3"
pandas-bokeh = "^0.5.5"
weasyprint = "52.5"
kaleido = "^0.2.1,!=0.2.1.post1"
types-Markdown = "^3.3.0"
pylint = {version = "^2.12.2", python = ">=3.6.2"}

[tool.poetry.extras]
extras = ["weasyprint", "Pillow"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
